Fix #16659 - Column Drop arrow is not responsive
Fixes: #16659

--- a/themes/bootstrap/scss/_common.scss
+++ b/themes/bootstrap/scss/_common.scss
@@ -2455,7 +2455,7 @@ input#auto_increment_opt {
 }
 
 .cDrop {
-  #{$left}: 0;
+  #{$right}: 0;
   position: absolute;
   top: 0;
 }
@@ -2464,9 +2464,7 @@ input#auto_increment_opt {
   background: url("../img/col_drop.png");
   cursor: pointer;
   height: 16px;
-  margin-#{$left}: 0.3em;
   margin-top: 0.3em;
-  position: absolute;
   width: 16px;
 
   &:hover {
@@ -2485,6 +2483,9 @@ input#auto_increment_opt {
   -moz-box-shadow: 0 0.2em 0.5em #333;
   -webkit-box-shadow: 0 0.2em 0.5em #333;
   box-shadow: 0 0.2em 0.5em #333;
+  margin-#{$left}: 75%;
+  #{$right}: 0;
+  width: max-content;
 
   .lDiv div {
     padding: 0.2em 0.5em 0.2em;
