--- a/themes/original/scss/_common.scss
+++ b/themes/original/scss/_common.scss
@@ -2137,7 +2137,7 @@ input#auto_increment_opt {
 }
 
 .cDrop {
-  #{$left}: 0;
+  #{$right}: 0;
   position: absolute;
   top: 0;
 }
@@ -2146,9 +2146,7 @@ input#auto_increment_opt {
   background: url("../img/col_drop.png");
   cursor: pointer;
   height: 16px;
-  margin-#{$left}: 0.5em;
   margin-top: 0.3em;
-  position: absolute;
   width: 16px;
 
   &:hover {
@@ -2164,6 +2162,9 @@ input#auto_increment_opt {
   background: #eee;
   border: solid 1px #999;
   position: absolute;
+  margin-#{$left}: 75%;
+  #{$right}: 0;
+  width: max-content;
 
   .lDiv div {
     padding: 0.2em 0.5em 0.2em 0.2em;
